(report): display report with the date range
